# breast-cancer-diagnostic

./: Breast cancer data exploration.ipynb  README.md  pyproject.toml
breast_cancer_diagnostic/: data_preprocessing.py  datasets.py  evaluate.py  metrics.py  models.py  run.py  train.py
experiment-trackings-diary/can_breast_cancer_be_predicted_reliably/: Breast cancer data exploration.ipynb  experimental_setup.md
