[project]
name = "breast-cancer-diagnostic"
version = "0.1.0"
description = ""
authors = [{ name = "Eric Dasse", email = "christ.gououi@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "ucimlrepo (>=0.0.7,<0.0.8)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.12"
ipykernel = "^7.2.0"
seaborn = "^0.13.2"
